// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginPage /> template Should be render 1`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    >
      Controll system
    </h1>
    <Logo />
    <form
      className="loginContainer__loginForm"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 2`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    >
      Controll system
    </h1>
    <Logo />
    <form
      className="loginContainer__loginForm"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 3`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    >
      Controll system
    </h1>
    <Logo />
    <form
      className="loginContainer__loginForm"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={true}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 4`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    >
      Controll system
    </h1>
    <Logo />
    <form
      className="loginContainer__loginForm"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={true}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;
